<resources>
    <string name="app_name">LFM Recette 2016</string>

    <string name="hello_world">Hello world!</string>
    <string name="choisir"></string>

    <string name="championnat">Championnat</string>
    <string name="coupemartiniqueUnphase">Coupe Martinique jusqu\'au 1/8 finale</string>
    <string name="coupemartiniqueDeuxphase">Coupe Martinique à partir des 1/4 de finale</string>
    <string name="coupefrance">Coupe de France</string>
    <string name="infopageAccueil">Choisissez une compétition</string>

    <string name="title_activity_championnat">Championnat</string>
    <string name="action_settings">Settings</string>
    <string name="infopageChampionnat">Entrez les informations pour calculer</string>

    <string name="infoticketTribune">Nombre de ticket Tribune</string>
    <string name="infoticketGradin">Nombre de ticket Gradin</string>
    <string name="infoticketPelouse">Nombre de ticket Pelouse</string>

    <string name="infoprixticketTribune">Prix ticket Tribune</string>
    <string name="infoprixticketGradin">Prix ticket Gradin</string>
    <string name="infoprixticketPelouse">Prix ticket Pelouse</string>

    <string name="infoNbticket">Nb</string>
    <string name="infoprixticket">Prix</string>
    <string name="infopageChampionnatTicketT">Tickets Tribune à</string>
    <string name="infopageChampionnatTicketG">Tickets Gradin à</string>
    <string name="infopageChampionnatTicketP">Tickets Pelouse à</string>

    <string name="locactionterrain">Location terrain</string>
    <string name="locactionterrain10">10%</string>
    <string name="locactionterrain15">15%</string>
    <string name="fraiseclairage">Frais d\'éclairage</string>
    <string name="clubReceveur">Club receveur</string>
    <string name="clubVisiteur">Club visiteur</string>
    <string name="fraisArbitre">Frais de l\'arbitre</string>
    <string name="fraisArbitreAssistants">Frais des arbitres assistants</string>
    <string name="fraisdelegue">Frais de délégués</string>

    <string name="boutonValider">Valider</string>
    <string name="title_activity_calcule_championnat_recette">Résultat</string>
    <string name="erreurSaisie">Une information n\'est pas saisie !!!</string>

    <string name="detailrecette">Détail des Recettes</string>
    <string name="detailfrais">Détail des Frais</string>
    <string name="repartition">Répartition</string>
    <string name="accusereception">Accusé de réception</string>
    <string name="title_activity_coupe_martinique_un">Coupe Martinique 1</string>
    <string name="title_activity_calcule_coupe_martinique_un_recette">Résultat</string>


    <string name="title_activity_coupe_martinique_deux">Coupe Martinique 2</string>
    <string name="title_activity_calcule_coupe_martinique_deux_recette">Résultat</string>
    <string name="title_activity_coupe_france">Coupe France</string>
    <string name="title_activity_calcule_coupe_france">Résultat</string>
</resources>
