<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17249cff"
    tools:context="com.recette.lfm.lfmrecette.CoupeFranceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:text="@string/infopageChampionnat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/styleTitrePage"/>
        <EditText
            android:id="@+id/nbticketTribune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/infoticketTribune"
            android:inputType="number"
            style="@style/styleEditText"
            />
        <EditText
            android:id="@+id/nbticketGradin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/infoticketGradin"
            android:inputType="number"
            style="@style/styleEditText"
            />
        <EditText
            android:id="@+id/nbticketPelouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/infoticketPelouse"
            android:inputType="number"
            style="@style/styleEditText"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locactionterrain"
            style="@style/styletextview"/>

        <RadioGroup
            android:id="@+id/radioLocationTerrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#ffffff"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locactionterrain10"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locactionterrain15"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>
        <EditText
            android:id="@+id/fraisArbitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fraisArbitre"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />

        <EditText
            android:id="@+id/fraisArbitreAssistants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fraisArbitreAssistants"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />
        <EditText
            android:id="@+id/fraisDelegue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fraisdelegue"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />
        <EditText
            android:id="@+id/fraisEclairage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fraiseclairage"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />

        <EditText
            android:id="@+id/clubReceveur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clubReceveur"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />

        <EditText
            android:id="@+id/clubVisiteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clubVisiteur"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boutonValider"
            style="@style/stylebuttonPage"
            android:onClick="calculeCoupe"
            />
    </LinearLayout>
</ScrollView>