<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17249cff"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:text="@string/infopageAccueil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/styleTitrePage"/>
        <Button
           android:id="@+id/championnatBoutton"
            android:text="@string/championnat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/stylebuttonPage"
            android:onClick="championnatAction"/>
        <Button
            android:id="@+id/coupeMartiniqueUNBoutton"
            android:text="@string/coupemartiniqueUnphase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/stylebuttonPage"
            android:onClick="coupeMartiniqueUnphaseAction"/>
        <Button
            android:id="@+id/coupeMartiniqueDEUXBoutton"
            android:text="@string/coupemartiniqueDeuxphase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/stylebuttonPage"
            android:onClick="coupeMartiniqueDeuxphaseAction"/>

        <Button
            android:id="@+id/coupeFrance"
            android:text="@string/coupefrance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/stylebuttonPage"
            android:onClick="coupeFranceAction"/>
    </LinearLayout>
</ScrollView>