<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17249cff"
    tools:context="com.recette.lfm.lfmrecette.ChampionnatActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView android:text="@string/infopageChampionnat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/styleTitrePage"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nbticketTribune"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/infoNbticket"
                    android:inputType="number"
                    android:layout_weight="1"
                    style="@style/styleEditText"
                    />
                <TextView android:text="@string/infopageChampionnatTicketT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/styleticketa"
                    android:layout_weight="2"/>
                <EditText
                    android:id="@+id/prixticketTribune"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/infoprixticket"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"
                    style="@style/styleEditText"
                    />
            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nbticketGradin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/infoNbticket"
                android:inputType="number"
                android:layout_weight="1"
                style="@style/styleEditText"
                />
            <TextView android:text="@string/infopageChampionnatTicketG"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/styleticketa"
                android:layout_weight="2"/>
            <EditText
                android:id="@+id/prixticketGradin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/infoprixticket"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                style="@style/styleEditText"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
             <EditText
                 android:id="@+id/nbticketPelouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/infoNbticket"
                 android:inputType="number"
                 android:layout_weight="1"
                 style="@style/styleEditText"
            />
            <TextView android:text="@string/infopageChampionnatTicketP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/styleticketa"
                android:layout_weight="2"/>
            <EditText
                android:id="@+id/prixticketPelouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/infoprixticket"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                style="@style/styleEditText"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locactionterrain"
            style="@style/styletextview"/>

        <RadioGroup
            android:id="@+id/radioLocationTerrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#ffffff"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locactionterrain10"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locactionterrain15"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

        <EditText
            android:id="@+id/fraisEclairage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fraiseclairage"
            android:inputType="numberDecimal"
            style="@style/styleEditText"
            />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boutonValider"
                style="@style/stylebuttonPage"
                android:onClick="calculeChampionnat"
                />
    </LinearLayout>
</ScrollView>